Fixing height on iPhone X portfolio languages.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -518,7 +518,7 @@ body {
   }
   @media only screen and (min-height: 810px) {
     #portfolio .portfolio-mob-language {
-      bottom: 3.5vh;
+      bottom: 4vh;
     }
   }
 
